--- a/uknown_3msky2.k.json
+++ b/uknown_3msky2.k.json
@@ -1,16 +1,63 @@
 {
 	"_id": "uknown_3msky2.k",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_3msky2.k",
 	"sector": "NGC_2868",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569096098256,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569096158256,
+	"category": "coin_flipper",
+	"last_update": 1569096098256,
+	"output": [
+		{
+			"args": {},
+			"calls": 9468,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"hrase",
+				"nder DE",
+				"minder ",
+				"rase rem",
+				"assphras",
+				" passphr"
+			],
+			"hits": [
+				{
+					"document": "Passphrase",
+					"frags": [
+						"hrase",
+						"nder DE",
+						"minder ",
+						"rase rem",
+						"assphras",
+						" passphr"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "Passphrase",
+			"frags": [
+				"hrase",
+				"nder DE",
+				"minder ",
+				"rase rem",
+				"assphras",
+				" passphr"
+			]
 		}
 	]
 }
