--- a/uknown_42opr9.scripts.json
+++ b/uknown_42opr9.scripts.json
@@ -1,16 +1,63 @@
 {
 	"_id": "uknown_42opr9.scripts",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_42opr9.scripts",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569095384495,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569095444495,
+	"category": "coin_flipper",
+	"last_update": 1569095384495,
+	"output": [
+		{
+			"args": {},
+			"calls": 13686,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"LETE ",
+				" bmak",
+				"ilaaal",
+				"alil #",
+				" THIS |",
+				"HIS | bm"
+			],
+			"hits": [
+				{
+					"document": "Passphrase",
+					"frags": [
+						"LETE ",
+						" bmak",
+						"ilaaal",
+						"alil #",
+						" THIS |",
+						"HIS | bm"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "Passphrase",
+			"frags": [
+				"LETE ",
+				" bmak",
+				"ilaaal",
+				"alil #",
+				" THIS |",
+				"HIS | bm"
+			]
 		}
 	]
 }
