--- a/uknown_musmb6.bot_scam_do_not_run.json
+++ b/uknown_musmb6.bot_scam_do_not_run.json
@@ -1,16 +1,131 @@
 {
 	"_id": "uknown_musmb6.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_musmb6.bot_scam_do_not_run",
 	"sector": "NGC_2868",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569096158035,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569096218035,
+	"category": "fishie_tank",
+	"last_update": 1569096158035,
+	"output": [
+		{
+			"args": {},
+			"calls": 10167,
+			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
+			"fragments": [
+				"ythin",
+				"LST0X",
+				" why t",
+				" After",
+				"AD031E6",
+				"CT0XF227",
+				"BC7D173\\n"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"ythin",
+						"LST0X",
+						" why t",
+						" After",
+						"AD031E6",
+						"CT0XF227",
+						"BC7D173\\n"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "feed"
+			},
+			"calls": 1276,
+			"base": [
+				"Fishies are happy.",
+				"actuly they look fine",
+				"they are still hungry?",
+				"they don't look so good"
+			],
+			"fragments": [
+				"ythin",
+				"LST0X",
+				" why t",
+				" After",
+				"AD031E6",
+				"CT0XF227",
+				"BC7D173\\n"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"ythin",
+						"LST0X",
+						" why t",
+						" After",
+						"AD031E6",
+						"CT0XF227",
+						"BC7D173\\n"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "clean"
+			},
+			"calls": 10044,
+			"base": "Fishies are happy. Algea eaters are displeased.",
+			"fragments": [
+				"ythin",
+				"LST0X",
+				" why t",
+				" After",
+				"AD031E6",
+				"CT0XF227",
+				"BC7D173\\n"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"ythin",
+						"LST0X",
+						" why t",
+						" After",
+						"AD031E6",
+						"CT0XF227",
+						"BC7D173\\n"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"ythin",
+				"LST0X",
+				" why t",
+				" After",
+				"AD031E6",
+				"CT0XF227",
+				"BC7D173\\n"
+			]
 		}
 	]
 }
