--- a/uknown_xcgazw.specs.json
+++ b/uknown_xcgazw.specs.json
@@ -1,16 +1,60 @@
 {
 	"_id": "uknown_xcgazw.specs",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_xcgazw.specs",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569095405167,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569095465167,
+	"category": "plant_sim",
+	"last_update": 1569095405167,
+	"output": [
+		{
+			"args": {},
+			"calls": 1102,
+			"base": "c:\"95f7hs\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"that ",
+				"made t",
+				" case ",
+				"to be m",
+				"se to be"
+			],
+			"hits": [
+				{
+					"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
+					"frags": [
+						"that ",
+						"made t",
+						" case ",
+						"to be m",
+						"se to be"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
+			"frags": [
+				"that ",
+				"made t",
+				" case ",
+				"to be m",
+				"se to be"
+			]
 		}
 	]
 }
