--- a/unknown_1773wk.shfflr_key.json
+++ b/unknown_1773wk.shfflr_key.json
@@ -1,16 +1,63 @@
 {
 	"_id": "unknown_1773wk.shfflr_key",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_1773wk.shfflr_key",
 	"sector": "SPC_6164",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569095807043,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569095867043,
+	"category": "coin_flipper",
+	"last_update": 1569095807043,
+	"output": [
+		{
+			"args": {},
+			"calls": 5312,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"of th",
+				" oper",
+				"ons an",
+				"ions a",
+				"s may l",
+				"o practi"
+			],
+			"hits": [
+				{
+					"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
+					"frags": [
+						"of th",
+						" oper",
+						"ons an",
+						"ions a",
+						"s may l",
+						"o practi"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
+			"frags": [
+				"of th",
+				" oper",
+				"ons an",
+				"ions a",
+				"s may l",
+				"o practi"
+			]
 		}
 	]
 }
