--- a/unknown_f43glc.pub_7lfra1.json
+++ b/unknown_f43glc.pub_7lfra1.json
@@ -1,16 +1,78 @@
 {
 	"_id": "unknown_f43glc.pub_7lfra1",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_f43glc.pub_7lfra1",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569095437480,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569095497480,
+	"category": "coin_flipper",
+	"last_update": 1569095437480,
+	"output": [
+		{
+			"args": {},
+			"calls": 7267,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"X7B_S",
+				"CT0X8",
+				"T0X7B_",
+				"LST0X7",
+				"SYST ER",
+				"ST ERRO",
+				"R | NET",
+				"FILE0X5",
+				"79769\\n",
+				"0XE7_CLS",
+				" NETW ER"
+			],
+			"hits": [
+				{
+					"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
+					"frags": [
+						"X7B_S",
+						"CT0X8",
+						"T0X7B_",
+						"LST0X7",
+						"SYST ER",
+						"ST ERRO",
+						"R | NET",
+						"FILE0X5",
+						"79769\\n",
+						"0XE7_CLS",
+						" NETW ER"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
+			"frags": [
+				"X7B_S",
+				"CT0X8",
+				"T0X7B_",
+				"LST0X7",
+				"SYST ER",
+				"ST ERRO",
+				"R | NET",
+				"FILE0X5",
+				"79769\\n",
+				"0XE7_CLS",
+				" NETW ER"
+			]
 		}
 	]
 }
