--- a/unknown_hnd65y.ch.json
+++ b/unknown_hnd65y.ch.json
@@ -1,16 +1,66 @@
 {
 	"_id": "unknown_hnd65y.ch",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_hnd65y.ch",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569095456852,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569095516852,
+	"category": "dice_roller",
+	"last_update": 1569095456852,
+	"output": [
+		{
+			"args": {},
+			"calls": 4263,
+			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
+			"fragments": [
+				"heir ",
+				"e tim",
+				"IATEL",
+				"LY 'EX",
+				"ITING'",
+				"st thei",
+				"TRACK. W"
+			],
+			"hits": [
+				{
+					"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+					"frags": [
+						"heir ",
+						"e tim",
+						"IATEL",
+						"LY 'EX",
+						"ITING'",
+						"st thei",
+						"TRACK. W"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+			"frags": [
+				"heir ",
+				"e tim",
+				"IATEL",
+				"LY 'EX",
+				"ITING'",
+				"st thei",
+				"TRACK. W"
+			]
 		}
 	]
 }
