--- a/uknown_tc92ub.beat.json
+++ b/uknown_tc92ub.beat.json
@@ -1,16 +1,138 @@
 {
 	"_id": "uknown_tc92ub.beat",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_tc92ub.beat",
 	"sector": "SPC_6164",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569095756000,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 18,
+	"next_scrape": 1569095816000,
+	"category": "fishie_tank",
+	"last_update": 1569095756000,
+	"output": [
+		{
+			"args": {},
+			"calls": 7449,
+			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
+			"fragments": [
+				"our c",
+				"ce of ",
+				" not e",
+				" mixed",
+				"leagues",
+				"erybody",
+				"I get t",
+				"ues. I g"
+			],
+			"hits": [
+				{
+					"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+					"frags": [
+						"our c",
+						"ce of ",
+						" not e",
+						" mixed",
+						"leagues",
+						"erybody",
+						"I get t",
+						"ues. I g"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "feed"
+			},
+			"calls": 558,
+			"base": [
+				"Fishies are happy.",
+				"actuly they look fine",
+				"they are still hungry?",
+				"they don't look so good"
+			],
+			"fragments": [
+				"our c",
+				"ce of ",
+				" not e",
+				" mixed",
+				"leagues",
+				"erybody",
+				"I get t",
+				"ues. I g"
+			],
+			"hits": [
+				{
+					"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+					"frags": [
+						"our c",
+						"ce of ",
+						" not e",
+						" mixed",
+						"leagues",
+						"erybody",
+						"I get t",
+						"ues. I g"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "clean"
+			},
+			"calls": 10348,
+			"base": "Fishies are happy. Algea eaters are displeased.",
+			"fragments": [
+				"our c",
+				"ce of ",
+				" not e",
+				" mixed",
+				"leagues",
+				"erybody",
+				"I get t",
+				"ues. I g"
+			],
+			"hits": [
+				{
+					"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+					"frags": [
+						"our c",
+						"ce of ",
+						" not e",
+						" mixed",
+						"leagues",
+						"erybody",
+						"I get t",
+						"ues. I g"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+			"frags": [
+				"our c",
+				"ce of ",
+				" not e",
+				" mixed",
+				"leagues",
+				"erybody",
+				"I get t",
+				"ues. I g"
+			]
 		}
 	]
 }
