--- a/unknown_91xrzs.jake.json
+++ b/unknown_91xrzs.jake.json
@@ -1,16 +1,72 @@
 {
 	"_id": "unknown_91xrzs.jake",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_91xrzs.jake",
 	"sector": "NGC_2868",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569096197910,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569096257910,
+	"category": "coin_flipper",
+	"last_update": 1569096197910,
+	"output": [
+		{
+			"args": {},
+			"calls": 12792,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"thing",
+				"u shou",
+				"ng the",
+				"is rea",
+				"think y",
+				"hing th",
+				" ## I t",
+				"ring ## ",
+				"ly consi"
+			],
+			"hits": [
+				{
+					"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
+					"frags": [
+						"thing",
+						"u shou",
+						"ng the",
+						"is rea",
+						"think y",
+						"hing th",
+						" ## I t",
+						"ring ## ",
+						"ly consi"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
+			"frags": [
+				"thing",
+				"u shou",
+				"ng the",
+				"is rea",
+				"think y",
+				"hing th",
+				" ## I t",
+				"ring ## ",
+				"ly consi"
+			]
 		}
 	]
 }
