--- a/unknown_xotwor.pin.json
+++ b/unknown_xotwor.pin.json
@@ -1,16 +1,131 @@
 {
 	"_id": "unknown_xotwor.pin",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_xotwor.pin",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569095494780,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 18,
+	"next_scrape": 1569095554780,
+	"category": "fishie_tank",
+	"last_update": 1569095494780,
+	"output": [
+		{
+			"args": {},
+			"calls": 7378,
+			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
+			"fragments": [
+				"will.",
+				"D Merr",
+				"l.\\n221",
+				"lory. I ",
+				"erry Chr",
+				"allory. ",
+				"mas.\\n221"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"will.",
+						"D Merr",
+						"l.\\n221",
+						"lory. I ",
+						"erry Chr",
+						"allory. ",
+						"mas.\\n221"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "feed"
+			},
+			"calls": 577,
+			"base": [
+				"Fishies are happy.",
+				"actuly they look fine",
+				"they are still hungry?",
+				"they don't look so good"
+			],
+			"fragments": [
+				"will.",
+				"D Merr",
+				"l.\\n221",
+				"lory. I ",
+				"erry Chr",
+				"allory. ",
+				"mas.\\n221"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"will.",
+						"D Merr",
+						"l.\\n221",
+						"lory. I ",
+						"erry Chr",
+						"allory. ",
+						"mas.\\n221"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "clean"
+			},
+			"calls": 7198,
+			"base": "Fishies are happy. Algea eaters are displeased.",
+			"fragments": [
+				"will.",
+				"D Merr",
+				"l.\\n221",
+				"lory. I ",
+				"erry Chr",
+				"allory. ",
+				"mas.\\n221"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"will.",
+						"D Merr",
+						"l.\\n221",
+						"lory. I ",
+						"erry Chr",
+						"allory. ",
+						"mas.\\n221"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"will.",
+				"D Merr",
+				"l.\\n221",
+				"lory. I ",
+				"erry Chr",
+				"allory. ",
+				"mas.\\n221"
+			]
 		}
 	]
 }
