--- a/unknown_yrfkx9.rotations.json
+++ b/unknown_yrfkx9.rotations.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yrfkx9.rotations",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "could not json",
 	"script": "unknown_yrfkx9.rotations",
 	"sector": "VNP_2683",
 	"sec_level": 2,
@@ -37,8 +37,8 @@
 			}
 		]
 	],
-	"updt": 1569092874381,
-	"edit": 6,
+	"updt": 1569093323451,
+	"edit": 7,
 	"scrape_ct": 20,
 	"next_scrape": 1569089487927,
 	"category": "UNKNOWN CATEGORY",
