--- a/unknown_yv7jeg.desk.json
+++ b/unknown_yv7jeg.desk.json
@@ -1,16 +1,72 @@
 {
 	"_id": "unknown_yv7jeg.desk",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_yv7jeg.desk",
 	"sector": "VNP_9171",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569097104092,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569097164092,
+	"category": "coin_flipper",
+	"last_update": 1569097104092,
+	"output": [
+		{
+			"args": {},
+			"calls": 7564,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"em as",
+				"'d be",
+				"## Yes",
+				"y don't",
+				"nalogy?",
+				" a good",
+				"orms' be",
+				"eforms' ",
+				"aveforms"
+			],
+			"hits": [
+				{
+					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+					"frags": [
+						"em as",
+						"'d be",
+						"## Yes",
+						"y don't",
+						"nalogy?",
+						" a good",
+						"orms' be",
+						"eforms' ",
+						"aveforms"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+			"frags": [
+				"em as",
+				"'d be",
+				"## Yes",
+				"y don't",
+				"nalogy?",
+				" a good",
+				"orms' be",
+				"eforms' ",
+				"aveforms"
+			]
 		}
 	]
 }
