--- a/uknown_2nb382.t_v2_mng.json
+++ b/uknown_2nb382.t_v2_mng.json
@@ -1,16 +1,233 @@
 {
 	"_id": "uknown_2nb382.t_v2_mng",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_2nb382.t_v2_mng",
 	"sector": "VNP_9171",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569097023644,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569097083644,
+	"category": "fishie_tank",
+	"last_update": 1569097023644,
+	"output": [
+		{
+			"args": {},
+			"calls": 10285,
+			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
+			"fragments": [
+				"ld ac",
+				"he ev",
+				"vironme",
+				"rapid r",
+				"pt rapi",
+				"ept rap",
+				"dden en",
+				"ctive p",
+				"nt of se"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"ld ac",
+						"pt rapi",
+						"ept rap",
+						"dden en",
+						"ctive p",
+						"nt of se"
+					]
+				},
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						"vironme",
+						"rapid r"
+					]
+				},
+				{
+					"document": "Proving/Children",
+					"frags": [
+						"he ev"
+					]
+				},
+				{
+					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+					"frags": [
+						"vironme"
+					]
+				},
+				{
+					"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+					"frags": [
+						"vironme"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "feed"
+			},
+			"calls": 710,
+			"base": [
+				"Fishies are happy.",
+				"actuly they look fine",
+				"they are still hungry?",
+				"they don't look so good"
+			],
+			"fragments": [
+				"ld ac",
+				"he ev",
+				"vironme",
+				"rapid r",
+				"pt rapi",
+				"ept rap",
+				"dden en",
+				"ctive p",
+				"nt of se"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"ld ac",
+						"pt rapi",
+						"ept rap",
+						"dden en",
+						"ctive p",
+						"nt of se"
+					]
+				},
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						"vironme",
+						"rapid r"
+					]
+				},
+				{
+					"document": "Proving/Children",
+					"frags": [
+						"he ev"
+					]
+				},
+				{
+					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+					"frags": [
+						"vironme"
+					]
+				},
+				{
+					"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+					"frags": [
+						"vironme"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "clean"
+			},
+			"calls": 3799,
+			"base": "Fishies are happy. Algea eaters are displeased.",
+			"fragments": [
+				"ld ac",
+				"he ev",
+				"vironme",
+				"rapid r",
+				"pt rapi",
+				"ept rap",
+				"dden en",
+				"ctive p",
+				"nt of se"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"ld ac",
+						"pt rapi",
+						"ept rap",
+						"dden en",
+						"ctive p",
+						"nt of se"
+					]
+				},
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						"vironme",
+						"rapid r"
+					]
+				},
+				{
+					"document": "Proving/Children",
+					"frags": [
+						"he ev"
+					]
+				},
+				{
+					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+					"frags": [
+						"vironme"
+					]
+				},
+				{
+					"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+					"frags": [
+						"vironme"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"ld ac",
+				"pt rapi",
+				"ept rap",
+				"dden en",
+				"ctive p",
+				"nt of se"
+			]
+		},
+		{
+			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+			"frags": [
+				"vironme",
+				"rapid r"
+			]
+		},
+		{
+			"document": "Proving/Children",
+			"frags": [
+				"he ev"
+			]
+		},
+		{
+			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+			"frags": [
+				"vironme"
+			]
+		},
+		{
+			"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+			"frags": [
+				"vironme"
+			]
 		}
 	]
 }
