--- a/uknown_tkrb2y.flush.json
+++ b/uknown_tkrb2y.flush.json
@@ -1,16 +1,131 @@
 {
 	"_id": "uknown_tkrb2y.flush",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_tkrb2y.flush",
 	"sector": "HJG_2723",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569096601587,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 18,
+	"next_scrape": 1569096661587,
+	"category": "fishie_tank",
+	"last_update": 1569096601587,
+	"output": [
+		{
+			"args": {},
+			"calls": 8391,
+			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
+			"fragments": [
+				"rstood",
+				"d what",
+				"tations",
+				"ever ha",
+				"ld do, s",
+				" if we k",
+				" don't t"
+			],
+			"hits": [
+				{
+					"document": "Proving/Children",
+					"frags": [
+						"rstood",
+						"d what",
+						"tations",
+						"ever ha",
+						"ld do, s",
+						" if we k",
+						" don't t"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "feed"
+			},
+			"calls": 684,
+			"base": [
+				"Fishies are happy.",
+				"actuly they look fine",
+				"they are still hungry?",
+				"they don't look so good"
+			],
+			"fragments": [
+				"rstood",
+				"d what",
+				"tations",
+				"ever ha",
+				"ld do, s",
+				" if we k",
+				" don't t"
+			],
+			"hits": [
+				{
+					"document": "Proving/Children",
+					"frags": [
+						"rstood",
+						"d what",
+						"tations",
+						"ever ha",
+						"ld do, s",
+						" if we k",
+						" don't t"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "clean"
+			},
+			"calls": 10326,
+			"base": "Fishies are happy. Algea eaters are displeased.",
+			"fragments": [
+				"rstood",
+				"d what",
+				"tations",
+				"ever ha",
+				"ld do, s",
+				" if we k",
+				" don't t"
+			],
+			"hits": [
+				{
+					"document": "Proving/Children",
+					"frags": [
+						"rstood",
+						"d what",
+						"tations",
+						"ever ha",
+						"ld do, s",
+						" if we k",
+						" don't t"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "Proving/Children",
+			"frags": [
+				"rstood",
+				"d what",
+				"tations",
+				"ever ha",
+				"ld do, s",
+				" if we k",
+				" don't t"
+			]
 		}
 	]
 }
