--- a/uknown_dobbrb.viewk3ys.json
+++ b/uknown_dobbrb.viewk3ys.json
@@ -1,16 +1,63 @@
 {
 	"_id": "uknown_dobbrb.viewk3ys",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_dobbrb.viewk3ys",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569097374586,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569097380113,
+	"edit": 2,
+	"scrape_ct": 20,
+	"next_scrape": 1569097434586,
+	"category": "plant_sim",
+	"last_update": 1569097374586,
+	"output": [
+		{
+			"args": {},
+			"calls": 724,
+			"base": "c:\"jccvvi\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"deal d",
+				".\\n20F",
+				"2101 th",
+				"r's stac",
+				"eal dama",
+				"amage to"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"deal d",
+						".\\n20F",
+						"2101 th",
+						"r's stac",
+						"eal dama",
+						"amage to"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"deal d",
+				".\\n20F",
+				"2101 th",
+				"r's stac",
+				"eal dama",
+				"amage to"
+			]
 		}
 	]
 }
