--- a/unknown_0gywot.robots.json
+++ b/unknown_0gywot.robots.json
@@ -1,16 +1,41 @@
 {
 	"_id": "unknown_0gywot.robots",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "timeout",
 	"script": "unknown_0gywot.robots",
 	"sector": "HJG_9716",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569097808108,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"retry_args": [
+		{
+			"do": "LOSE"
+		}
+	],
+	"scrape_ct": 19,
+	"next_scrape": 1569097868108,
+	"category": "risk_factor",
+	"last_update": 1569097808108,
+	"output": [
+		{
+			"args": {},
+			"calls": 2079,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"as year",
+				"at was y",
+				" proving",
+				"rn\\n1E9A ",
+				"g\\n1E97 a"
+			]
 		}
 	]
 }
