--- a/unknown_vu8sig.s.json
+++ b/unknown_vu8sig.s.json
@@ -1,16 +1,75 @@
 {
 	"_id": "unknown_vu8sig.s",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_vu8sig.s",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569097495079,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569097555079,
+	"category": "dice_roller",
+	"last_update": 1569097495079,
+	"output": [
+		{
+			"args": {},
+			"calls": 14896,
+			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
+			"fragments": [
+				"r sid",
+				"e of ",
+				" stac",
+				"I plac",
+				"ne,\\n20",
+				"ane,\\n2",
+				"ace the",
+				"A6 On y",
+				"20A5 Wh",
+				" lane,\\n"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"r sid",
+						"e of ",
+						" stac",
+						"I plac",
+						"ne,\\n20",
+						"ane,\\n2",
+						"ace the",
+						"A6 On y",
+						"20A5 Wh",
+						" lane,\\n"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"r sid",
+				"e of ",
+				" stac",
+				"I plac",
+				"ne,\\n20",
+				"ane,\\n2",
+				"ace the",
+				"A6 On y",
+				"20A5 Wh",
+				" lane,\\n"
+			]
 		}
 	]
 }
