--- a/uknown_6s2peb.dcg.json
+++ b/uknown_6s2peb.dcg.json
@@ -1,16 +1,63 @@
 {
 	"_id": "uknown_6s2peb.dcg",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_6s2peb.dcg",
 	"sector": "HJG_8615",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569097565631,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1569097625631,
+	"category": "dice_roller",
+	"last_update": 1569097565631,
+	"output": [
+		{
+			"args": {},
+			"calls": 7286,
+			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
+			"fragments": [
+				"152 th",
+				"0 be p",
+				"s.\\n215",
+				"o stacks",
+				"alue of ",
+				"51 WILD "
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"152 th",
+						"0 be p",
+						"s.\\n215",
+						"o stacks",
+						"alue of ",
+						"51 WILD "
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"152 th",
+				"0 be p",
+				"s.\\n215",
+				"o stacks",
+				"alue of ",
+				"51 WILD "
+			]
 		}
 	]
 }
