--- a/uknown_71chos.breach.json
+++ b/uknown_71chos.breach.json
@@ -1,16 +1,131 @@
 {
 	"_id": "uknown_71chos.breach",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_71chos.breach",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569097364452,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569097424452,
+	"category": "fishie_tank",
+	"last_update": 1569097364452,
+	"output": [
+		{
+			"args": {},
+			"calls": 5510,
+			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
+			"fragments": [
+				"4B of",
+				" agai",
+				"ng aga",
+				"orking ",
+				"rking ag",
+				"You're h",
+				"ere out\\n"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"4B of",
+						" agai",
+						"ng aga",
+						"orking ",
+						"rking ag",
+						"You're h",
+						"ere out\\n"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "feed"
+			},
+			"calls": 1073,
+			"base": [
+				"Fishies are happy.",
+				"actuly they look fine",
+				"they are still hungry?",
+				"they don't look so good"
+			],
+			"fragments": [
+				"4B of",
+				" agai",
+				"ng aga",
+				"orking ",
+				"rking ag",
+				"You're h",
+				"ere out\\n"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"4B of",
+						" agai",
+						"ng aga",
+						"orking ",
+						"rking ag",
+						"You're h",
+						"ere out\\n"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "clean"
+			},
+			"calls": 8589,
+			"base": "Fishies are happy. Algea eaters are displeased.",
+			"fragments": [
+				"4B of",
+				" agai",
+				"ng aga",
+				"orking ",
+				"rking ag",
+				"You're h",
+				"ere out\\n"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"4B of",
+						" agai",
+						"ng aga",
+						"orking ",
+						"rking ag",
+						"You're h",
+						"ere out\\n"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"4B of",
+				" agai",
+				"ng aga",
+				"orking ",
+				"rking ag",
+				"You're h",
+				"ere out\\n"
+			]
 		}
 	]
 }
