--- a/unknown_aou7t2.trainz.json
+++ b/unknown_aou7t2.trainz.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_aou7t2.trainz",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "could not json",
 	"script": "unknown_aou7t2.trainz",
 	"sector": "K_8332",
 	"sec_level": 2,
@@ -37,6 +37,6 @@
 			}
 		]
 	],
-	"updt": 1569092648772,
-	"edit": 4
+	"updt": 1569093323451,
+	"edit": 5
 }
