--- a/unknown_hbhyqa.wiki.json
+++ b/unknown_hbhyqa.wiki.json
@@ -1,16 +1,63 @@
 {
 	"_id": "unknown_hbhyqa.wiki",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_hbhyqa.wiki",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569097454879,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569097514879,
+	"category": "coin_flipper",
+	"last_update": 1569097454879,
+	"output": [
+		{
+			"args": {},
+			"calls": 11925,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"am | ",
+				"-team ",
+				"E ERROR",
+				" | USER",
+				"TIME ERR",
+				"RROR | T"
+			],
+			"hits": [
+				{
+					"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+					"frags": [
+						"am | ",
+						"-team ",
+						"E ERROR",
+						" | USER",
+						"TIME ERR",
+						"RROR | T"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+			"frags": [
+				"am | ",
+				"-team ",
+				"E ERROR",
+				" | USER",
+				"TIME ERR",
+				"RROR | T"
+			]
 		}
 	]
 }
