--- a/unknown_u8unay.search.json
+++ b/unknown_u8unay.search.json
@@ -1,16 +1,57 @@
 {
 	"_id": "unknown_u8unay.search",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_u8unay.search",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569097475059,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086110548,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1569097535059,
+	"category": "plant_sim",
+	"last_update": 1569097475059,
+	"output": [
+		{
+			"args": {},
+			"calls": 1053,
+			"base": "c:\"l1a2jl\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"on.\\n2",
+				"are one",
+				"r Erin R",
+				"ar.\\n2142"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"on.\\n2",
+						"are one",
+						"r Erin R",
+						"ar.\\n2142"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"on.\\n2",
+				"are one",
+				"r Erin R",
+				"ar.\\n2142"
+			]
 		}
 	]
 }
