--- a/unknown_0gywot.robots.json
+++ b/unknown_0gywot.robots.json
@@ -6,29 +6,43 @@
 	"sector": "HJG_9716",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569097808108,
+	"last_scraped": 1569097836479,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569086110548,
-	"edit": 1,
+	"updt": 1569097832958,
+	"edit": 2,
 	"retry_args": [
 		{
 			"do": "LOSE"
 		}
 	],
 	"scrape_ct": 19,
-	"next_scrape": 1569097868108,
+	"next_scrape": 1569186618747,
 	"category": "risk_factor",
-	"last_update": 1569097808108,
+	"last_update": 1569097836479,
 	"output": [
 		{
 			"args": {},
 			"calls": 2079,
 			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"as year",
+				"at was y",
+				" proving",
+				"rn\\n1E9A ",
+				"g\\n1E97 a"
+			]
+		},
+		{
+			"args": {
+				"do": "win"
+			},
+			"calls": 159,
+			"base": "YOU WON 2GC\n...if i could afford to pay out.",
 			"fragments": [
 				"as year",
 				"at was y",
