--- a/unknown_ywicgz.db.json
+++ b/unknown_ywicgz.db.json
@@ -1,16 +1,57 @@
 {
 	"_id": "unknown_ywicgz.db",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "timeout",
 	"script": "unknown_ywicgz.db",
 	"sector": "HJG_9716",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 0,
+	"last_scraped": 1569097876886,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
+		}
+	],
+	"updt": 1569086334758,
+	"edit": 1,
+	"retry_args": [
+		{
+			"do": "LOSE"
+		}
+	],
+	"scrape_ct": 19,
+	"next_scrape": 1569181469870,
+	"category": "risk_factor",
+	"last_update": 1569097876886,
+	"output": [
+		{
+			"args": {},
+			"calls": 2987,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"t poin",
+				"physic",
+				"is for ",
+				"m. The e",
+				" cases, ",
+				" The man"
+			]
+		},
+		{
+			"args": {
+				"do": "win"
+			},
+			"calls": 128,
+			"base": "YOU WON 2GC\n...if i could afford to pay out.",
+			"fragments": [
+				"t poin",
+				"physic",
+				"is for ",
+				"m. The e",
+				" cases, ",
+				" The man"
+			]
 		}
 	]
 }
