--- a/uknown_o5vbyr.open.json
+++ b/uknown_o5vbyr.open.json
@@ -6,23 +6,23 @@
 	"sector": "VNP_9534",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569087889897,
+	"last_scraped": 1569098953111,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569085661801,
-	"edit": 1,
-	"scrape_ct": 18,
-	"next_scrape": 1569087949897,
+	"updt": 1569087911517,
+	"edit": 2,
+	"scrape_ct": 17,
+	"next_scrape": 1569099013111,
 	"category": "fishie_tank",
-	"last_update": 1569087889897,
+	"last_update": 1569098953111,
 	"output": [
 		{
 			"args": {},
-			"calls": 10503,
+			"calls": 14784,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"help ",
@@ -147,6 +147,14 @@
 				"ing wit",
 				" later s"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "feed"
+		},
+		{
+			"do": "clean"
 		}
 	]
 }
