--- a/anonymous_gbk0nx.premium_help.json
+++ b/anonymous_gbk0nx.premium_help.json
@@ -6,23 +6,23 @@
 	"sector": "NGC_5711",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569090191240,
+	"last_scraped": 1569100496555,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569090167363,
-	"edit": 2,
-	"scrape_ct": 17,
-	"next_scrape": 1569090251240,
+	"updt": 1569090393006,
+	"edit": 3,
+	"scrape_ct": 12,
+	"next_scrape": 1569100556555,
 	"category": "clicker",
-	"last_update": 1569090191240,
+	"last_update": 1569100496555,
 	"output": [
 		{
 			"args": {},
-			"calls": 7177,
+			"calls": 13864,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ST0X7",
@@ -50,7 +50,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 8188,
+			"calls": 16084,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ST0X7",
@@ -78,7 +78,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 1060,
+			"calls": 1444,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"ST0X7",
@@ -100,6 +100,34 @@
 						"ILE0X2BC"
 					]
 				}
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 624,
+			"base": "`LCLICK0SECURED`",
+			"fragments": [
+				"ST0X7 ",
+				" ST0X7",
+				"XBF_CL ",
+				"ST0X7K ",
+				" XBF_CL",
+				" SST0X7",
+				"_FILE0X2",
+				"XBF_CLK ",
+				"ST0X7CK ",
+				"MFT0XBF_",
+				"LE0X2BC ",
+				"ILE0X2BC",
+				"FILE0X2 ",
+				"ECT0XF2 ",
+				" SXBF_CL",
+				" SEST0X7",
+				" LE0X2BC",
+				" FILE0X2",
+				" ECT0XF2"
 			]
 		}
 	],
