--- a/uknown_vcd79v.ez40.json
+++ b/uknown_vcd79v.ez40.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_vcd79v.ez40",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_vcd79v.ez40",
 	"sector": "SPC_1857",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1566315754778
+		},
+		{
+			"type": "died",
+			"when": 1569101115565
 		}
 	],
 	"next_scrape": 1569010796940,
@@ -76,6 +80,6 @@
 			]
 		}
 	],
-	"updt": 1568970462002,
-	"edit": 98
+	"updt": 1568970913502,
+	"edit": 99
 }
