--- a/uknown_vcd79v.sandstorm.json
+++ b/uknown_vcd79v.sandstorm.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_vcd79v.sandstorm",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_vcd79v.sandstorm",
 	"sector": "K_7717",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1560967082883
+		},
+		{
+			"type": "died",
+			"when": 1569100933176
 		}
 	],
 	"next_scrape": 1569026300142,
@@ -74,8 +78,8 @@
 			]
 		}
 	],
-	"updt": 1568975873484,
-	"edit": 301,
+	"updt": 1568980836230,
+	"edit": 302,
 	"identified": [
 		{
 			"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
