--- a/anonymous_gbk0nx.premium_help.json
+++ b/anonymous_gbk0nx.premium_help.json
@@ -13,8 +13,8 @@
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569090393006,
-	"edit": 3,
+	"updt": 1569100540268,
+	"edit": 4,
 	"scrape_ct": 12,
 	"next_scrape": 1569100556555,
 	"category": "clicker",
@@ -128,10 +128,62 @@
 				" LE0X2BC",
 				" FILE0X2",
 				" ECT0XF2"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"ST0X7 ",
+						" ST0X7",
+						"XBF_CL ",
+						"ST0X7K ",
+						" XBF_CL",
+						" SST0X7",
+						"XBF_CLK ",
+						"ST0X7CK ",
+						"LE0X2BC ",
+						"FILE0X2 ",
+						"ECT0XF2 ",
+						" SXBF_CL",
+						" SEST0X7",
+						" LE0X2BC",
+						" FILE0X2",
+						" ECT0XF2"
+					]
+				},
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"_FILE0X2",
+						"MFT0XBF_",
+						"ILE0X2BC"
+					]
+				}
 			]
 		}
 	],
 	"identified": [
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"ST0X7 ",
+				" ST0X7",
+				"XBF_CL ",
+				"ST0X7K ",
+				" XBF_CL",
+				" SST0X7",
+				"XBF_CLK ",
+				"ST0X7CK ",
+				"LE0X2BC ",
+				"FILE0X2 ",
+				"ECT0XF2 ",
+				" SXBF_CL",
+				" SEST0X7",
+				" LE0X2BC",
+				" FILE0X2",
+				" ECT0XF2"
+			]
+		},
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 			"frags": [
