--- a/uknown_2nb382.t_v2_mng.json
+++ b/uknown_2nb382.t_v2_mng.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_2nb382.t_v2_mng",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_2nb382.t_v2_mng",
 	"sector": "VNP_9171",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569097023644,
+	"last_scraped": 1569104505121,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569086110548,
-	"edit": 1,
-	"scrape_ct": 19,
-	"next_scrape": 1569097083644,
+	"updt": 1569097155623,
+	"edit": 2,
+	"scrape_ct": 17,
+	"next_scrape": 1569104565121,
 	"category": "fishie_tank",
-	"last_update": 1569097023644,
+	"last_update": 1569104534662,
 	"output": [
 		{
 			"args": {},
-			"calls": 10285,
+			"calls": 19672,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"ld ac",
@@ -78,7 +78,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 710,
+			"calls": 2016,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -228,6 +228,11 @@
 			"frags": [
 				"vironme"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "clean"
 		}
 	]
 }
