--- a/unknown_da6i0q.still_alive.json
+++ b/unknown_da6i0q.still_alive.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_da6i0q.still_alive",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_da6i0q.still_alive",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569099303510,
+	"last_scraped": 1569106104206,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569088588042,
-	"edit": 2,
-	"scrape_ct": 15,
-	"next_scrape": 1569099363510,
+	"updt": 1569099410506,
+	"edit": 3,
+	"scrape_ct": 11,
+	"next_scrape": 1569106164206,
 	"category": "clicker",
-	"last_update": 1569099303510,
+	"last_update": 1569106104206,
 	"output": [
 		{
 			"args": {},
-			"calls": 15264,
+			"calls": 25757,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"receiv",
@@ -48,7 +48,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 15242,
+			"calls": 18082,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"receiv",
@@ -107,6 +107,11 @@
 				"36 Is th",
 				"2A I am "
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
