--- a/unknown_0jkcl8.bot_scam_do_not_run.json
+++ b/unknown_0jkcl8.bot_scam_do_not_run.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_0jkcl8.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_0jkcl8.bot_scam_do_not_run",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569099595749,
+	"last_scraped": 1569106334973,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569089038796,
-	"edit": 2,
-	"scrape_ct": 13,
-	"next_scrape": 1569099655749,
+	"updt": 1569099635753,
+	"edit": 3,
+	"scrape_ct": 8,
+	"next_scrape": 1569106394973,
 	"category": "clicker",
-	"last_update": 1569099595749,
+	"last_update": 1569106334973,
 	"output": [
 		{
 			"args": {},
-			"calls": 17739,
+			"calls": 30432,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"X7A_S",
@@ -56,7 +56,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 13219,
+			"calls": 27079,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"X7A_S",
@@ -90,7 +90,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 2086,
+			"calls": 2803,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"X7A_S",
