--- a/unknown_ll1h7z.fishie_tank.json
+++ b/unknown_ll1h7z.fishie_tank.json
@@ -6,19 +6,19 @@
 	"sector": "VNP_9275",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569106192988,
+	"last_scraped": 1569112253955,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569099410506,
-	"edit": 3,
-	"scrape_ct": 17,
-	"next_scrape": 1569106252988,
+	"updt": 1569106403335,
+	"edit": 4,
+	"scrape_ct": 16,
+	"next_scrape": 1569112313955,
 	"category": "plant_sim",
-	"last_update": 1569106192988,
+	"last_update": 1569112253955,
 	"output": [
 		{
 			"args": {},
@@ -48,6 +48,21 @@
 						"itored s"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 731,
+			"base": "c:\"tluzmp\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
+			"fragments": [
+				" in o",
+				"uce di",
+				"rator-",
+				"onitor",
+				"irect ",
+				"ement i",
+				" direct",
+				"itored s"
 			]
 		}
 	],
