--- a/uknown_bofn3d.external_yg40iz.json
+++ b/uknown_bofn3d.external_yg40iz.json
@@ -6,19 +6,19 @@
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569106284178,
+	"last_scraped": 1569112313785,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569099635753,
-	"edit": 3,
-	"scrape_ct": 17,
-	"next_scrape": 1569106344178,
+	"updt": 1569106403335,
+	"edit": 4,
+	"scrape_ct": 16,
+	"next_scrape": 1569112373785,
 	"category": "plant_sim",
-	"last_update": 1569106284178,
+	"last_update": 1569112313785,
 	"output": [
 		{
 			"args": {},
@@ -46,6 +46,20 @@
 						"al asset"
 					]
 				}
+			]
+		},
+		{
+			"args": {},
+			"calls": 546,
+			"base": "c:\"85lkwv\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Á\n                 ",
+			"fragments": [
+				"ly 28",
+				"OS/Co",
+				" and c",
+				"e') and",
+				"2062. E",
+				"d to hav",
+				"al asset"
 			]
 		}
 	],
