--- a/unknown_yz5fze.bot_scam_do_not_run.json
+++ b/unknown_yz5fze.bot_scam_do_not_run.json
@@ -1,26 +1,26 @@
 {
 	"_id": "unknown_yz5fze.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_yz5fze.bot_scam_do_not_run",
 	"sector": "HJG_9716",
 	"sec_level": 4,
 	"date_added": 1569106816695,
-	"last_scraped": 1569106876094,
+	"last_scraped": 1569112717135,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569106816695
 		}
 	],
-	"scrape_ct": 16,
-	"next_scrape": 1569106936094,
+	"scrape_ct": 12,
+	"next_scrape": 1569112777135,
 	"category": "clicker",
-	"last_update": 1569106876094,
+	"last_update": 1569112717135,
 	"output": [
 		{
 			"args": {},
-			"calls": 10421,
+			"calls": 20692,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ender",
@@ -62,7 +62,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 6162,
+			"calls": 10608,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ender",
@@ -104,7 +104,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 1989,
+			"calls": 2574,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"ender",
@@ -143,8 +143,8 @@
 			]
 		}
 	],
-	"updt": 1569106852070,
-	"edit": 1,
+	"updt": 1569112717213,
+	"edit": 3,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
