--- a/anonymous_gbk0nx.premium_help.json
+++ b/anonymous_gbk0nx.premium_help.json
@@ -6,31 +6,42 @@
 	"sector": "NGC_5711",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569106935844,
+	"last_scraped": 1569112776134,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569102119372,
-	"edit": 5,
-	"scrape_ct": 8,
-	"next_scrape": 1569106995844,
+	"updt": 1569107078998,
+	"edit": 6,
+	"scrape_ct": 5,
+	"next_scrape": 1569112836134,
 	"category": "clicker",
-	"last_update": 1569106935844,
+	"last_update": 1569112776134,
 	"output": [
 		{
 			"args": {},
-			"calls": 23743,
+			"calls": 28065,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ST0X7",
+				" Just",
 				"XBF_CL",
+				"SECT0X",
+				"CLST0X",
 				"ECT0XF2",
+				"D172\\nA",
+				"A_SECT0",
+				"7_FILE0",
+				"2BC7D17",
 				"_FILE0X2",
+				"\\nAD031E",
+				"XF227_FI",
+				"T0XF227_",
 				"MFT0XBF_",
-				"ILE0X2BC"
+				"ILE0X2BC",
+				"2\\nAD031"
 			],
 			"hits": [
 				{
@@ -50,15 +61,26 @@
 			"args": {
 				"click": true
 			},
-			"calls": 24718,
+			"calls": 29974,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ST0X7",
+				" Just",
 				"XBF_CL",
+				"SECT0X",
+				"CLST0X",
 				"ECT0XF2",
+				"D172\\nA",
+				"A_SECT0",
+				"7_FILE0",
+				"2BC7D17",
 				"_FILE0X2",
+				"\\nAD031E",
+				"XF227_FI",
+				"T0XF227_",
 				"MFT0XBF_",
-				"ILE0X2BC"
+				"ILE0X2BC",
+				"2\\nAD031"
 			],
 			"hits": [
 				{
@@ -78,15 +100,26 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 1444,
+			"calls": 1961,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"ST0X7",
+				" Just",
 				"XBF_CL",
+				"SECT0X",
+				"CLST0X",
 				"ECT0XF2",
+				"D172\\nA",
+				"A_SECT0",
+				"7_FILE0",
+				"2BC7D17",
 				"_FILE0X2",
+				"\\nAD031E",
+				"XF227_FI",
+				"T0XF227_",
 				"MFT0XBF_",
-				"ILE0X2BC"
+				"ILE0X2BC",
+				"2\\nAD031"
 			],
 			"hits": [
 				{
