--- a/uknown_l21bqu.b_ss.json
+++ b/uknown_l21bqu.b_ss.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_l21bqu.b_ss",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "could not json",
 	"script": "uknown_l21bqu.b_ss",
 	"sector": "HJG_5971",
 	"sec_level": 2,
@@ -37,8 +37,8 @@
 			}
 		]
 	],
-	"updt": 1569101892861,
-	"edit": 11,
+	"updt": 1569108430971,
+	"edit": 12,
 	"scrape_ct": 17,
 	"next_scrape": 1569108273687,
 	"category": "UNKNOWN CATEGORY",
