--- a/uknown_yr7sj1.bot_scam_do_not_run.json
+++ b/uknown_yr7sj1.bot_scam_do_not_run.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_yr7sj1.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "could not json",
 	"script": "uknown_yr7sj1.bot_scam_do_not_run",
 	"sector": "HJG_5971",
 	"sec_level": 2,
@@ -37,8 +37,8 @@
 			}
 		]
 	],
-	"updt": 1569102119372,
-	"edit": 11,
+	"updt": 1569108430971,
+	"edit": 12,
 	"scrape_ct": 17,
 	"next_scrape": 1569108383615,
 	"category": "UNKNOWN CATEGORY",
