--- a/unknown_v4fsde.flex.json
+++ b/unknown_v4fsde.flex.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_v4fsde.flex",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "could not json",
 	"script": "unknown_v4fsde.flex",
 	"sector": "NGC_7513",
 	"sec_level": 2,
@@ -37,8 +37,8 @@
 			}
 		]
 	],
-	"updt": 1569101892861,
-	"edit": 11,
+	"updt": 1569108205982,
+	"edit": 12,
 	"scrape_ct": 17,
 	"next_scrape": 1569108233037,
 	"category": "UNKNOWN CATEGORY",
