--- a/uknown_fw8224.mitta.json
+++ b/uknown_fw8224.mitta.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_fw8224.mitta",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "could not json",
 	"script": "uknown_fw8224.mitta",
 	"sector": "NGC_7513",
 	"sec_level": 2,
@@ -37,8 +37,8 @@
 			}
 		]
 	],
-	"updt": 1569101892861,
-	"edit": 11,
+	"updt": 1569108205982,
+	"edit": 12,
 	"scrape_ct": 17,
 	"next_scrape": 1569108172383,
 	"category": "UNKNOWN CATEGORY",
