--- a/uknown_z6s9es.db.json
+++ b/uknown_z6s9es.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_z6s9es.db",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "could not json",
 	"script": "uknown_z6s9es.db",
 	"sector": "NGC_7513",
 	"sec_level": 2,
@@ -37,8 +37,8 @@
 			}
 		]
 	],
-	"updt": 1569101892861,
-	"edit": 10,
+	"updt": 1569108205982,
+	"edit": 11,
 	"scrape_ct": 15,
 	"next_scrape": 1569108222058,
 	"category": "UNKNOWN CATEGORY",
