--- a/unknown_hnd65y.order.json
+++ b/unknown_hnd65y.order.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_hnd65y.order",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "could not json",
 	"script": "unknown_hnd65y.order",
 	"sector": "K_2954",
 	"sec_level": 2,
@@ -37,8 +37,8 @@
 			}
 		]
 	],
-	"updt": 1569101441980,
-	"edit": 9,
+	"updt": 1569107754870,
+	"edit": 10,
 	"scrape_ct": 18,
 	"next_scrape": 1569107740089,
 	"category": "UNKNOWN CATEGORY",
