--- a/unknown_yuqh2v.loc.json
+++ b/unknown_yuqh2v.loc.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yuqh2v.loc",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "could not json",
 	"script": "unknown_yuqh2v.loc",
 	"sector": "HJG_5971",
 	"sec_level": 2,
@@ -37,8 +37,8 @@
 			}
 		]
 	],
-	"updt": 1569102119372,
-	"edit": 11,
+	"updt": 1569108430971,
+	"edit": 12,
 	"scrape_ct": 18,
 	"next_scrape": 1569108413333,
 	"category": "UNKNOWN CATEGORY",
