--- a/uknown_gps5ec.u.json
+++ b/uknown_gps5ec.u.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_gps5ec.u",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "could not json",
 	"script": "uknown_gps5ec.u",
 	"sector": "NGC_9612",
 	"sec_level": 2,
@@ -37,8 +37,8 @@
 			}
 		]
 	],
-	"updt": 1569102344366,
-	"edit": 10,
+	"updt": 1569108882842,
+	"edit": 11,
 	"scrape_ct": 15,
 	"next_scrape": 1569108767646,
 	"category": "UNKNOWN CATEGORY",
