--- a/uknown_i5argo.spec_search.json
+++ b/uknown_i5argo.spec_search.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_i5argo.spec_search",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "could not json",
 	"script": "uknown_i5argo.spec_search",
 	"sector": "NGC_9612",
 	"sec_level": 2,
@@ -37,8 +37,8 @@
 			}
 		]
 	],
-	"updt": 1569102344366,
-	"edit": 9,
+	"updt": 1569108882842,
+	"edit": 10,
 	"scrape_ct": 18,
 	"next_scrape": 1569108846794,
 	"category": "UNKNOWN CATEGORY",
