--- a/uknown_xru1sk.smash.json
+++ b/uknown_xru1sk.smash.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_xru1sk.smash",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "could not json",
 	"script": "uknown_xru1sk.smash",
 	"sector": "K_8332",
 	"sec_level": 2,
@@ -37,8 +37,8 @@
 			}
 		]
 	],
-	"updt": 1569102569611,
-	"edit": 8,
+	"updt": 1569109108071,
+	"edit": 9,
 	"scrape_ct": 16,
 	"next_scrape": 1569108956019,
 	"category": "UNKNOWN CATEGORY",
