--- a/unknown_0qz0kr.db.json
+++ b/unknown_0qz0kr.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_0qz0kr.db",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "could not json",
 	"script": "unknown_0qz0kr.db",
 	"sector": "HJG_5971",
 	"sec_level": 2,
@@ -37,8 +37,8 @@
 			}
 		]
 	],
-	"updt": 1569102119372,
-	"edit": 11,
+	"updt": 1569108656229,
+	"edit": 12,
 	"scrape_ct": 16,
 	"next_scrape": 1569108626910,
 	"category": "UNKNOWN CATEGORY",
