--- a/unknown_4gqqp5.decrypt.json
+++ b/unknown_4gqqp5.decrypt.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_4gqqp5.decrypt",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "could not json",
 	"script": "unknown_4gqqp5.decrypt",
 	"sector": "K_8332",
 	"sec_level": 2,
@@ -37,8 +37,8 @@
 			}
 		]
 	],
-	"updt": 1569102569611,
-	"edit": 8,
+	"updt": 1569109108071,
+	"edit": 9,
 	"scrape_ct": 17,
 	"next_scrape": 1569108977109,
 	"category": "UNKNOWN CATEGORY",
