--- a/uknown_cak1xs.gib_gc.json
+++ b/uknown_cak1xs.gib_gc.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_cak1xs.gib_gc",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "could not json",
 	"script": "uknown_cak1xs.gib_gc",
 	"sector": "K_8332",
 	"sec_level": 2,
@@ -37,8 +37,8 @@
 			}
 		]
 	],
-	"updt": 1569102569611,
-	"edit": 7,
+	"updt": 1569109108071,
+	"edit": 8,
 	"scrape_ct": 18,
 	"next_scrape": 1569108997155,
 	"category": "UNKNOWN CATEGORY",
