--- a/uknown_semxxy.graph.json
+++ b/uknown_semxxy.graph.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_semxxy.graph",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "could not json",
 	"script": "uknown_semxxy.graph",
 	"sector": "NGC_9612",
 	"sec_level": 2,
@@ -29,8 +29,8 @@
 			}
 		]
 	],
-	"updt": 1569102344366,
-	"edit": 7,
+	"updt": 1569108656229,
+	"edit": 8,
 	"scrape_ct": 16,
 	"next_scrape": 1569108705020,
 	"category": "UNKNOWN CATEGORY",
