--- a/uknown_svndpj.specs.json
+++ b/uknown_svndpj.specs.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_svndpj.specs",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "could not json",
 	"script": "uknown_svndpj.specs",
 	"sector": "NGC_9612",
 	"sec_level": 2,
@@ -37,8 +37,8 @@
 			}
 		]
 	],
-	"updt": 1569102344366,
-	"edit": 9,
+	"updt": 1569108882842,
+	"edit": 10,
 	"scrape_ct": 14,
 	"next_scrape": 1569108817009,
 	"category": "UNKNOWN CATEGORY",
