--- a/unknown_zpits8.bot_scam_do_not_run.json
+++ b/unknown_zpits8.bot_scam_do_not_run.json
@@ -6,23 +6,23 @@
 	"sector": "SPC_2784",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569109398097,
+	"last_scraped": 1569114744526,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569103020734,
-	"edit": 3,
-	"scrape_ct": 14,
-	"next_scrape": 1569109458097,
+	"updt": 1569109558032,
+	"edit": 4,
+	"scrape_ct": 12,
+	"next_scrape": 1569114804526,
 	"category": "fishie_tank",
-	"last_update": 1569109398097,
+	"last_update": 1569114735080,
 	"output": [
 		{
 			"args": {},
-			"calls": 22755,
+			"calls": 26662,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"ms of",
@@ -170,6 +170,14 @@
 			"frags": [
 				"igital "
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "feed"
+		},
+		{
+			"do": "clean"
 		}
 	]
 }
