--- a/unknown_z6bucy.ds.json
+++ b/unknown_z6bucy.ds.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_z6bucy.ds",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_z6bucy.ds",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569112223086,
+	"last_scraped": 1569117520879,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569106175639,
-	"edit": 4,
-	"scrape_ct": 10,
-	"next_scrape": 1569112283086,
+	"updt": 1569112266275,
+	"edit": 5,
+	"scrape_ct": 8,
+	"next_scrape": 1569117580879,
 	"category": "fishie_tank",
-	"last_update": 1569112223086,
+	"last_update": 1569117520879,
 	"output": [
 		{
 			"args": {},
-			"calls": 26172,
+			"calls": 30417,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"ld 'w",
@@ -54,7 +54,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 3398,
+			"calls": 4972,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -91,7 +91,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 35835,
+			"calls": 39010,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"ld 'w",
